Implementaçao inicial do projeto banco (projeto a fazer)

--- a/javascript/projeto_banco/banco.html
+++ b/javascript/projeto_banco/banco.html
@@ -24,6 +24,9 @@
                 <button onclick="efetuarOperacao('saldo')" >CONSULTAR SALDO</button>
                 <button onclick="efetuarOperacao('extrato')" >CONSULTAR EXTRATO</button>
             </div>
+
+            <div id="saida">
+            </div>
        
         </main>
 
