--- a/HTML/tags.html
+++ b/HTML/tags.html
@@ -117,6 +117,7 @@
     <br>
     <input type="date">
     <br>
+    <!-- o atributo name define os grupos que serão considerados entre si -->
     <input type="radio" id="radio1" name="radio_group" checked> <label for="radio1"> valor para radio 1 </label>
     <input type="radio" id="radio2" name="radio_group"> <label for="radio2"> valor para radio 2 </label>
     <br>
