--- a/javascript/lista-de-tarefas/lista-de-tarefas.html
+++ b/javascript/lista-de-tarefas/lista-de-tarefas.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="#">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Tarefas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <title>Lista de Tarefas</title>
 </head>
 <body>
-
+    
     <header>
         Lista de Tarefas
     </header>
@@ -26,13 +26,14 @@
 
     <section class="lista">
         <ul>
+
         </ul>
     </section>
 
     <section class="acoes">
         <button onclick="limparTarefas()">Limpar</button>
     </section>
-    
+
     <script src="scripts.js"></script>
 
 </body>
